[project]
name = "forms-watcher"
version = "0.1.0"
description = "Poll Microsoft Forms and get notified when they go live"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
forms-watcher = "forms_watcher:main"
